--- a/style.css
+++ b/style.css
@@ -15,6 +15,7 @@ body{
 	max-width: 800px;
 	margin: auto;
 	padding: 10px;
+	font-style: italic;
 }
 
 .txtb{
@@ -25,10 +26,12 @@ body{
 	padding: 10px;
 	outline: none;
 	font-size: 18px;
+	font-style: italic;
 }
 
 h3{
 	margin: 10px 0;
+	font-style: italic;
 }
 
 .task{
